2004-02-29 21:42  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/ftfont.h, Source/art/ftfont.m: Add
	-drawGlyphs::at::to::::::alpha::color::::transform:drawinfo: method.

	* Source/art/ARTContext.m (-GSShowGlyphs::): Use it if the
	destination window has an alpha buffer.

	(-initWithContextInfo:): Try to find a DirectColor or TrueColor
	visual before falling back on the default visual.

2004-02-28  Adam Fedor  <fedor@gnu.org>

	* Version 0.9.2

2004-02-28  Fred Kiefer <FredKiefer@gmx.de>

	* Source/win32/WIN32Server.m (-setupRunLoopInputSourcesForMode:): 
	Use a shorte timer interval.

2004-02-24 15:45  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/image.m: Add support for grayscale, one-is-black
	color spaces.
	(_image_get_color_rgb_cmyk_gray): Invert gray value if one is black.
	(-DPSimage:::::::::::): If the color space is NSDeviceBlackColorSpace
	or NSCalibratedColorSpace, treat one as black.

2004-02-17  Adam Fedor  <fedor@gnu.org>

	* Source/x11/XGServerWindow.m ([XGServer -orderwindow:::]): Don't
	try to raise the root window.

2004-02-08 23:20  Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/xlib/XGGState.m: Added necessary calibrated
	colorspaces to the DPSimage: method.
	
2004-02-04 01:48  Alexander Malmberg <alexander@malmberg.org>

	* Source/x11/XGServerEvent.m: Remove uses of the now deprecated
	"casts as lvalues" gcc extension.

2004-01-27  Adam Fedor  <fedor@gnu.org>

	* Documentation/Back/DefaultsSummary.gsdoc: Fix doc markup
	* Documentation/Back/GNUmakefile: Change install location.

2004-01-25  Fred Kiefer <FredKiefer@gmx.de>

	* Source/art/shfill.m (-DPSshfill:):
	* Source/winlib/Win32GState.m (-DPSimage::::):
	* Source/xlib/XGGState.m (-DPSimage::::): Replaced
	appendTransform: with prependTransform:. 
	* Source/art/image.m (-DPSimage:): Replaced prependTransform: with
	appendTransform:. 

2004-01-25 13:52  Alexander Malmberg <alexander@malmberg.org>
