@@ -1,3 +1,8 @@
+2004-03-30 01:49  Alexander Malmberg <alexander@malmberg.org>
+
+	* Source/x11/XGGLFormat.m (-initWithAttributes:): Fix handling of
+	15bpp and 16bpp modes (NSOpenGLPFAAccumSize).
+
 2004-02-29 21:42  Alexander Malmberg <alexander@malmberg.org>
 
 	* Source/art/ftfont.h, Source/art/ftfont.m: Add
